--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 /* .App {
   text-align: center;
-}
+} */
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -12,8 +12,12 @@
     animation: App-logo-spin infinite 20s linear;
   }
 } */
+
+
+
 .App {
   background-color: #e0e1e6;
+
 }
 
 /* .App-header {
@@ -29,13 +33,14 @@
 
 /* .App-link {
   color: #61dafb;
-}
+} */
 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
-} */
+}
